assets/css/style.css
/* ... */
.navbar li{
	font-family: alliander-font-bold;
	text-transform: uppercase;
	font-weight:bolder;
	font-size: 12px;
}

.navbar li a {
	color: #43515A;
}

.navbar .dropdown-menu>li a {
	color: white;
}

.navbar li {
	border-bottom: 5px solid #FFFFFF;
}

.navbar li.active, .navbar li:hover {
	border-bottom: 5px solid #829F41;
}

.navbar li.active a {
	color: #829F41;
}

.navbar li.active a.subitem {
	color: white;
}

.navbar li.active a.subitem:hover {
	color: #829F41;
}

ul.nav li.dropdown:hover ul.dropdown-menu {
    display: block;    
}

.dropdown-menu {
	background-color: #829F41;
}

.dropdown-menu>li {
	border-bottom: 0!important;
	color: white;
}

.dropdown-menu>li.active>a {
	color: #829F41;
}

.dropdown-menu>li>a:hover {
	background-color: white;
	color: #829F41;
}

.float-center-wrapper {
	width: 100%; 
    position: relative;
}

.more-news-button {
	margin-top: 30px;
}

#header-carousel img {
	max-width:100% !important;
    display: table;
    height:auto;
    display:block;    
}

#header-carousel img:hover {
	cursor:w-resize
}

#header-carousel {
	margin:0 auto;
	text-align: center;
}

.slick-prev:before, .slick-next:before {
	color: #43515A!important;
}


.float-center-wrapper .slick-prev:hover, .float-center-wrapper .slick-next:hover {
	background-color:transparent;
}

#index {
	margin-top: 30px;
}

.home #index h1 {
	text-transform: uppercase;
	font-family: alliander-font-light;
}

.last-word {
	padding-top:0px;
	text-transform: uppercase;
	color: #829F41!important;
	font-family: alliander-font;
	margin-top: -15px;
}

.home #index p {
	font-size: 14px;
	font-family: alliander-font-light;
}

.intro-story p {
	height: 5.5em;
}

@media only screen and (max-width: 1024px)  { 
	.home #index .intro-story1 {
		padding: 0!important;
	}

	.home #index .intro-story1 button {
		position: relative;
		left:0;
	}

	.home #index .intro-story2 {
		padding: 0!important;
	}

	.home #index .intro-story2 button {
		position: relative;
		left:0;
	}

	.home #index .intro-story3 {
		padding: 0!important;
	}

	.home #index .intro-story3 button {
		position: relative;
		left:0;
	}

}

.introductions {
	margin-bottom: 100px;
	word-break: break-word;
}

.read-more-button {
	font-family: alliander-font-light;
	background-color: #829F41;
	border: 0;
	border-radius: 12px;
	color: white;
	padding: 10px 15px;
	margin:1em 0 2em 0;
}

.read-more-button:hover {
	background-color: #43515A;
}

.black-hr {
	border-top: 1px solid #333;
}

#partners-carousel {
	margin-bottom: 0;
}

h1.center-header {
	font-family: alliander-font-light;
	text-align: center;
	margin: 50px 0;
}

.float-center-wrapper {
	text-align:center;
}

.float-right {
	float:right;
}

.float-center-wrapper > button {
	font-family: alliander-font;
	background-color: #43515A;
	border: 0;
	border-radius: 12px;
	color: white;
	padding: 12px 15px;
	margin-bottom: 50px;
	width:210px;
}

.page-sidebar .float-center-wrapper > button {
	float: right;
}

.float-center-wrapper button:hover {
	background-color: #829F41;
}

.post-summary {
	min-height: 395px;
	border: 1px solid #BDC3C6;
	border-radius: 20px;
	margin-bottom: 40px;
	text-overflow: ellipsis;
	overflow: hidden;
}

.post-summary img {
	width: 100%;
	height: 325px!important;
	border-radius: 20px 20px 0 0;
}

.post-summary article h2 a {
	font-family: alliander-font-bold;
	color: #829F41;
	font-size: 16px;
}

article.home-article-title {
	height: 100px;
	width: inherit;
	padding: 0px 20px;
}

.post-summary article h2 {
	height: 70px;
	overflow: hidden;
	text-overflow: ellipsis;
	-o-text-overflow: ellipsis;
}

footer {
	background-color: #43515A;
	border-top: 15px solid #829F41;
	font-family: alliander-font-light;
}

ul.footer-list{
	text-transform: uppercase;
	margin: 50px 0 0 -40px;
	color: white;
	list-style: none;
	line-height:30px;
}

.newsletter-subscription {
	margin: 50px 0 0 0px;
	color: white;
	text-transform: uppercase;
}

.newsletter-subscription input[type="email"] {
	width: 100%;
	background-color: #3C474C;
	border: 1px solid #BDC3C6;
	border-radius: 15px;
	height:35px;
	padding-left:10px;
}

.newsletter-subscription input[type="submit"] {
	background-color: #829F41;
	border:0;
	border-radius: 15px;
	padding: 3px 35px;
	text-transform: uppercase;
	font-size: 20px;
}

.newsletter-subscription input[type="submit"]:hover {
	background-color: #829F41;
}

.copyright {
	padding-top: 5px;
	color: white;
	text-align: right;
}

/*pages specific*/
.featured-image {
	width:100%;
	display: block;
	margin:0 auto;
}

.page #main article {
	padding: 30px 0;
	font-family: alliander-font;
}

.page #main article h1 {
	font-family: alliander-font-light;
	text-transform: uppercase;
}

.page #main article h1 .green-word {
	color: #829F41;
	font-family: alliander-font;
}

.page #main article .article-wrap h1 {
	color: #829F41;
	font-family: alliander-font;
	text-transform: none;
}

.page #main article .article-wrap h2 {
	font-family: alliander-font-bold;
	font-size: 16px;
	font-weight:bolder;
	color: #6D787F;
	padding:20px 0;
	border-bottom: 1px solid #BDC3C6;
} 

.page #main article .article-wrap a {
	color: #829F41;
}

.page #main article .article-wrap img {
	max-width: 100%;
	margin: 20px 5px;
}

.page #main article .article-wrap figcaption {
	height:50px;
	background-color: rgba(1,1,1, 0.7);
	padding: 20px;
	color: white;
}

.page-sidebar {
	display: inline-block;
	min-height: 1450px;
}

.page-sidebar h1, .page-sidebar h2 {
	font-size: 18px;
}

.join-box {
	background: -webkit-radial-gradient(#B1C782, #829F41); /* Safari 5.1 to 6.0 */
	background: -o-radial-gradient(#B1C782, #829F41); /* For Opera 11.6 to 12.0 */
	background: -moz-radial-gradient(#B1C782, #829F41); /* For Firefox 3.6 to 15 */
	background: radial-gradient(#B1C782, #829F41); /* Standard syntax */
	background-color: #829F41;
	width: 25em;
	height: 25em;
	border-radius: 30px;
	font-family: alliander-font;
	text-transform: uppercase;
	float:right;
	margin-top: 40px;
}

.join-box h2 {
	color: white;
	padding: 25% 10% 0 10%;
}
/* ... */

